--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "dgram": "^1.0.1",
     "os": "^0.1.2",
+    "prompt-sync": "^4.2.0",
     "yargs": "^17.7.2"
   }
 }
